update form POST endpoints
