# python/server/swagger.yml
@@ -159,6 +159,8 @@ paths:
       summary: "Change the plant species of the device"
 #      consumes:
 #        - "text/plain"
+      consumes:
+        - "application/x-www-form-urlencoded"
       parameters:
         - in: path
           name: device_id
@@ -166,7 +168,7 @@ paths:
           type: integer
           minimum: 1
           description: "Device ID"
-        - in: query
+        - in: formData
           name: species_id
           required: true
           type: integer
@@ -185,6 +187,8 @@ paths:
       summary: "Override the device target values"
 #      consumes:
 #        - "text/plain"
+      consumes:
+        - "application/x-www-form-urlencoded"
       parameters:
         - in: path
           name: device_id
@@ -192,36 +196,28 @@ paths:
           type: integer
           minimum: 1
           description: "Device ID"
-        - in: body
-          name: values
+#        - in: body
+#          name: values
+#          required: true
+#          schema:
+#            type: object
+#            properties:
+#              moisture:
+#                type: string
+#                description: "ideal moisture (LOW, HIGH, MEDIUM)"
+#              temperature:
+#                type: number
+#                description: "ideal temperature (°F)"
+        - in: formData
+          name: temperature
           required: true
-          schema:
-            type: object
-            properties:
-              moisture:
-                type: string
-                description: "ideal moisture (LOW, HIGH, MEDIUM)"
-              temperature:
-                type: number
-                description: "ideal temperature (°F)"
-#        - in: body
-#          name: species
-#          required: false
-#          schema:
-#            type: integer
-#          description: "The new plant species to change to"
-#        - in: body
-#          name: moisture
-#          required: false
-#          schema:
-#            type: number
-#          description: "The new target moisture to change to"
-#        - in: body
-#          name: temperature
-#          required: false
-#          schema:
-#            type: number
-#          description: "The new target temperature to change to"
+          type: number
+          description: "ideal temperature (°F)"
+        - in: formData
+          name: moisture
+          required: true
+          type: string
+          description: "ideal moisture (LOW, HIGH, MEDIUM)"
       responses:
         200:
           description: "Successful update"
